# web-server-rust

./: .env.example  Cargo.toml
src/: main.rs  mongo.rs
src/routers/: base.rs  books.rs
src/services/: books.rs
src/utils/: helpers.rs
