[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
mongodb = "2.1"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
serde_json = "1.0"
serde_urlencoded = "0.7"
dotenv = "0.15.0"
